Bugfix: Fix markup margins collapsing

--- a/src/scss/_utils.scss
+++ b/src/scss/_utils.scss
@@ -1,3 +1,8 @@
 .u-text-nowrap {
 	white-space: nowrap;
 }
+
+.u-flex-column {
+	display: flex;
+	flex-flow: column nowrap;
+}
