--- a/src/scss/pages/_landing.scss
+++ b/src/scss/pages/_landing.scss
@@ -1,4 +1,6 @@
 .landing {
+	display: flex;
+	flex-flow: column nowrap;
 	background-color: $body-bg-color-dark;
 	color: $body-color-light;
 
@@ -10,7 +12,7 @@
 		background-size: cover;
 		background-position: top 50% left 50%;
 		min-height: 80vh;
-		padding-bottom: 6.5rem;
+		margin-bottom: 6.5rem;
 	}
 
 	&__bottom-bg {
@@ -201,7 +203,8 @@
 	}
 
 	&__section {
-		padding: 6.5rem 0;
+		// padding: 6.5rem 0;
+		margin: 6.5rem 0;
 
 		&--contact-us {
 			.landing__section-special {
